@@ -15,7 +15,6 @@ import org.junit.Rule;
 import org.junit.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -51,7 +50,7 @@ public class PropertyQuerierTest {
         System.out.println("######################################");
         System.out.println("######################################");
         System.out.println("######################################");
-        for (Entity<MongoValueWithObject> entity :this.repository.all(0, 1000)){
+        for (Entity<MongoValueWithObject> entity : this.repository.all(0, 1000)) {
             System.out.println(entity);
         }
         System.out.println("######################################");
@@ -63,7 +62,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelStringProperty_whenEqualsString__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a == 'yip'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -72,7 +71,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelStringProperty_whenStartswithString__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a starts with 'yi'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -81,7 +80,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelStringProperty_whenEndswithString__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a ends with 'ip'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -90,7 +89,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelStringProperty_whenContainsString__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a contains 'i'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -99,7 +98,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelIntegerProperty_whenEqualsInteger__thenFiltered() throws Exception {
         List<Integer> actual = this.repository.search(PropertyQuery.builder().filter("b == 2").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::b).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::b).toList();
         assertThat(actual,
                 containsInAnyOrder(2)
         );
@@ -108,14 +107,14 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnToplevelIntegerProperty_whenEqualsString__thenNoMatch() throws Exception {
         List<Integer> actual = this.repository.search(PropertyQuery.builder().filter("b == '2'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::b).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::b).toList();
         assertThat(actual, is(empty()));
     }
 
     @Test
     public void givenFilteringOnToplevelIntegerProperty_whenLowerThanInteger__thenNoMatch() throws Exception {
         List<Integer> actual = this.repository.search(PropertyQuery.builder().filter("b < 4").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::b).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::b).toList();
         assertThat(actual,
                 containsInAnyOrder(1, 2, 3)
         );
@@ -125,7 +124,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnDeepStringProperty_whenLowerThanString__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("c.d < '003'").build(), 0, 1000).valueList()
-                .stream().map(o -> o.opt().c().d().orElseGet(() -> null)).collect(Collectors.toList());
+                .stream().map(o -> o.opt().c().d().orElseGet(() -> null)).toList();
         assertThat(actual,
                 containsInAnyOrder("001", "002")
         );
@@ -134,7 +133,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnDeepStringProperty__whenEqualsRHSProperty__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("c.e == a").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -143,7 +142,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelStringProperty__whenEqualsRHSProperty__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a == c.e").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -152,7 +151,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelProperty__whenIsNull__thenFiltered() throws Exception {
         List<Integer> actual = this.repository.search(PropertyQuery.builder().filter("a == null").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::b).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::b).toList();
         assertThat(actual,
                 containsInAnyOrder(6)
         );
@@ -161,7 +160,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelProperty__whenIsNotNull__thenFiltered() throws Exception {
         List<Integer> actual = this.repository.search(PropertyQuery.builder().filter("a != null").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::b).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::b).toList();
         assertThat(actual,
                 containsInAnyOrder(1, 2, 3, 4, 5)
         );
@@ -170,7 +169,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelStringProperty__whenAnd__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a == 'yip' && p.q.r == '002'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -179,7 +178,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelStringProperty__whenOr__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("a == 'yip' || p.q.r == '003'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip", "yup")
         );
@@ -188,7 +187,7 @@ public class PropertyQuerierTest {
     @Test
     public void givenFilteringOnTopLevelStringProperty__whenNot__thenFiltered() throws Exception {
         List<String> actual = this.repository.search(PropertyQuery.builder().filter("! a != 'yip'").build(), 0, 1000).valueList()
-                .stream().map(MongoValueWithObject::a).collect(Collectors.toList());
+                .stream().map(MongoValueWithObject::a).toList();
         assertThat(actual,
                 containsInAnyOrder("yip")
         );
@@ -198,9 +197,8 @@ public class PropertyQuerierTest {
     public void givenSortingOnTopLevelIntegerProperty__whenDesc__theResultsAreOrdered() throws Exception {
         assertThat(
                 this.repository.search(PropertyQuery.builder().sort("b desc").build(), 0, 1000).valueList()
-                        .stream().map(MongoValueWithObject::b).collect(Collectors.toList()),
+                        .stream().map(MongoValueWithObject::b).toList(),
                 contains(6, 5, 4, 3, 2, 1)
         );
     }
-
 }
